force-app/main/default/objects/Meta_Ad__c/Meta_Ad__c.object-meta.xml
<CustomObject>
    <label>Meta Anúncio</label>
    <nameField>
        <label>Nome do Anúncio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Anúncios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>