force-app/main/default/objects/Meta_Ad__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Meta Anúncios</relationshipLabel>
    <relationshipName>Meta_Ads</relationshipName>
    <type>Lookup</type>
</CustomField>