force-app/main/default/objects/Meta_Ad__c/fields/CPC__c.field-meta.xml
<CustomField>
    <fullName>CPC__c</fullName>
    <label>CPC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>