force-app/main/default/objects/Meta_Ad__c/fields/Creative_Body__c.field-meta.xml
<CustomField>
    <fullName>Creative_Body__c</fullName>
    <label>Texto do Criativo</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>