force-app/main/default/objects/Meta_Ad__c/fields/Creative_Headline__c.field-meta.xml
<CustomField>
    <fullName>Creative_Headline__c</fullName>
    <label>Título do Criativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>