force-app/main/default/objects/Meta_Ad__c/fields/Creative_Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Creative_Thumbnail_URL__c</fullName>
    <label>URL da Miniatura do Criativo</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>