force-app/main/default/objects/Meta_Ad__c/fields/Creative_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Creative_Video_URL__c</fullName>
    <label>URL do Vídeo do Criativo</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>