force-app/main/default/objects/Meta_Ad__c/fields/CTR__c.field-meta.xml
<CustomField>
    <fullName>CTR__c</fullName>
    <label>CTR</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>