force-app/main/default/objects/Meta_Ad__c/fields/Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Status__c</fullName>
    <label>Status de Enriquecimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Enriched</fullName>
                <label>Enriquecido</label>
            </value>
            <value>
                <fullName>Failed_Not_Found</fullName>
                <label>Falha - Não Encontrado</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <label>Falha</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>