force-app/main/default/objects/Meta_Ad__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequência</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>