force-app/main/default/objects/Meta_Ad__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Tipo de Mídia</label>
    <length>40</length>
    <type>Text</type>
</CustomField>