force-app/main/default/objects/Meta_Ad__c/fields/Meta_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ID do Anúncio Meta</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>