force-app/main/default/objects/Meta_Ad__c/fields/Meta_AdSet__c.field-meta.xml
<CustomField>
    <fullName>Meta_AdSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conjunto de Anúncios Meta</label>
    <referenceTo>Meta_AdSet__c</referenceTo>
    <relationshipLabel>Meta Anúncios</relationshipLabel>
    <relationshipName>Meta_Ads</relationshipName>
    <type>Lookup</type>
</CustomField>