force-app/main/default/objects/Meta_Ad__c/fields/Meta_Effective_Status__c.field-meta.xml
<CustomField>
    <fullName>Meta_Effective_Status__c</fullName>
    <label>Status Efetivo Meta</label>
    <length>40</length>
    <type>Text</type>
</CustomField>