force-app/main/default/objects/Meta_Ad__c/fields/Meta_Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Video_ID__c</fullName>
    <label>ID do Vídeo Meta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>