force-app/main/default/objects/Meta_Ad__c/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <label>Alcance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>