force-app/main/default/objects/Meta_Ad__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Tipo de Origem</label>
    <length>40</length>
    <type>Text</type>
</CustomField>