force-app/main/default/objects/Meta_Ad__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <label>URL de Origem</label>
    <length>1024</length>
    <type>Text</type>
</CustomField>